--- a/SourceCode/Wyttle/package.json
+++ b/SourceCode/Wyttle/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.81.1",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.9",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
