--- a/SourceCode/Wyttle/app.json
+++ b/SourceCode/Wyttle/app.json
@@ -31,7 +31,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.bannerzz.Wyttle"
     },
     "web": {
       "output": "static",
