--- a/SourceCode/Wyttle/package.json
+++ b/SourceCode/Wyttle/package.json
@@ -20,6 +20,7 @@
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.8",
@@ -27,6 +28,7 @@
     "expo-image-picker": "~17.0.9",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.17",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
