--- a/SourceCode/Wyttle/app.json
+++ b/SourceCode/Wyttle/app.json
@@ -259,7 +259,8 @@
           }
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true,
