--- a/SourceCode/Wyttle/package.json
+++ b/SourceCode/Wyttle/package.json
@@ -11,8 +11,10 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@daily-co/react-native-daily-js": "^0.83.0",
+    "@daily-co/react-native-webrtc": "^124.0.6-daily.1",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.1.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -40,6 +42,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-background-timer": "^2.4.1",
     "react-native-big-calendar": "^4.19.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
